objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Product_Desired__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Lanyon Events</fullName>
                </value>
                <value>
                    <fullName>Lanyon Group</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings</fullName>
                </value>
                <value>
                    <fullName>Lanyon Mobile</fullName>
                </value>
                <value>
                    <fullName>Lanyon Passkey</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>SMM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_No_of_Days__c</fullName>
        <label>(C) Qualified(No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <description>Used for AdvocateHub</description>
        <label>Referral_ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_attained_by_Cvent_Rep__c</fullName>
        <label>Referral attained by (Cvent rep)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Abhishek Michael</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Alex Platia</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Alice Dixon</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Andy Komandur</fullName>
                </value>
                <value>
                    <fullName>Ashley Baber</fullName>
                </value>
                <value>
                    <fullName>Ashley Carleton</fullName>
                </value>
                <value>
                    <fullName>Ashley Mohney</fullName>
                </value>
                <value>
                    <fullName>Barry Womack</fullName>
                </value>
                <value>
                    <fullName>Bart Hart</fullName>
                </value>
                <value>
                    <fullName>Ben Diamond</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Brendan Markham</fullName>
                </value>
                <value>
                    <fullName>Brian Kochhar</fullName>
                </value>
                <value>
                    <fullName>Brian Pirkle</fullName>
                </value>
                <value>
                    <fullName>Brittany Spano</fullName>
                </value>
                <value>
                    <fullName>Brittlynn Goddard</fullName>
                </value>
                <value>
                    <fullName>Caitlin McMorrow</fullName>
                </value>
                <value>
                    <fullName>Caitlin Rawles</fullName>
                </value>
                <value>
                    <fullName>Camille Wingo</fullName>
                </value>
                <value>
                    <fullName>Carla Perez</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Cesar Devoto</fullName>
                </value>
                <value>
                    <fullName>Chad Kite</fullName>
                </value>
                <value>
                    <fullName>Christian Lewis</fullName>
                </value>
                <value>
                    <fullName>Christopher Coultas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_by_name__c</fullName>
        <label>Referred by (name)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referredby__c</fullName>
        <label>Referred by (prospect/client)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_s_Email__c</fullName>
        <label>Referrer's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMM_Lead_Status__c</fullName>
        <label>SMM Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified</fullName>
                </value>
                <value>
                    <fullName>Marketing Researched</fullName>
                </value>
                <value>
                    <fullName>Sales Accepted</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMM_Lost_Details__c</fullName>
        <label>SMM Lost Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMM_Recycle_Competitor_Name__c</fullName>
        <label>SMM Recycle - Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMM_Recycle_Trash_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Arcaneo</fullName>
                </value>
                <value>
                    <fullName>Lenos</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Signup4</fullName>
                </value>
                <value>
                    <fullName>Starcite</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMM_Recycle_Trash_Reason__c</fullName>
        <label>SMM Recycle/Trash Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMM_Lead_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Already a Client</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Needs Additional Features (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>No Events</fullName>
                </value>
                <value>
                    <fullName>No Longer There</fullName>
                </value>
                <value>
                    <fullName>Not a fit/Joker</fullName>
                </value>
                <value>
                    <fullName>Not enough Budget</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not ready to Buy</fullName>
                </value>
                <value>
                    <fullName>Outsources Registration</fullName>
                </value>
                <value>
                    <fullName>Revived</fullName>
                </value>
                <value>
                    <fullName>Sales Rejected</fullName>
                </value>
                <value>
                    <fullName>Too Small (Events/Reg)</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Using a Competitor (-Specify Competitor Name-)</fullName>
                </value>
                <value>
                    <fullName>Using an In-house System</fullName>
                </value>
                <value>
                    <fullName>Working better POC</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ST_Migrated_ID__c</fullName>
        <label>ST Migrated ID</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ST_Migrated_Record__c</fullName>
        <label>ST Migrated Record</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Migrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Vertical__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Sales Vertical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set_No_of_Days__c</fullName>
        <label>(D) Set(No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sourcing_through__c</fullName>
        <label>Sourcing through/TPP(s) Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>CSN_P_Lead_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1Hotelsolutions.com</fullName>
                </value>
                <value>
                    <fullName>Abcevents.com</fullName>
                </value>
                <value>
                    <fullName>Agoda</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>Arcaneo</fullName>
                </value>
                <value>
                    <fullName>Arrowhead Conferences and Events</fullName>
                </value>
                <value>
                    <fullName>BCD</fullName>
                </value>
                <value>
                    <fullName>Bedouk Meetings &amp; Events Media</fullName>
                </value>
                <value>
                    <fullName>BizBash</fullName>
                </value>
                <value>
                    <fullName>C.R.S. International GmbH &amp; Co. KG</fullName>
                </value>
                <value>
                    <fullName>ConferenceDirect(CD)</fullName>
                </value>
                <value>
                    <fullName>ConventionPlanit.com</fullName>
                </value>
                <value>
                    <fullName>Conventions.net</fullName>
                </value>
                <value>
                    <fullName>Cyberweb Hotels</fullName>
                </value>
                <value>
                    <fullName>Elite Meetings International</fullName>
                </value>
                <value>
                    <fullName>empowerMINT</fullName>
                </value>
                <value>
                    <fullName>E-proDirect</fullName>
                </value>
                <value>
                    <fullName>EventConnect</fullName>
                </value>
                <value>
                    <fullName>Eventective</fullName>
                </value>
                <value>
                    <fullName>Eventoplus</fullName>
                </value>
                <value>
                    <fullName>Eventsinamerica</fullName>
                </value>
                <value>
                    <fullName>Experient</fullName>
                </value>
                <value>
                    <fullName>Gathering Guide</fullName>
                </value>
                <value>
                    <fullName>Helmsbriscoe(HB)</fullName>
                </value>
                <value>
                    <fullName>HotelPlanner.com</fullName>
                </value>
                <value>
                    <fullName>Hotelzon</fullName>
                </value>
                <value>
                    <fullName>HPN</fullName>
                </value>
                <value>
                    <fullName>ITA Group</fullName>
                </value>
                <value>
                    <fullName>Lenos</fullName>
                </value>
                <value>
                    <fullName>Maritz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Job_Function__c</fullName>
        <description>This field is requested by Stephanie Sweetland under Governance #: GR-0656</description>
        <label>Sub Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Behavior_Score__c</fullName>
        <label>Supplier Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Combined_Score__c</fullName>
        <formula>Supplier_Behavior_Score__c  +  Supplier_Demographic_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Combined Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Demographic_Score__c</fullName>
        <label>Supplier Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Behavior_Score__c</fullName>
        <label>Survey Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Combined_Score__c</fullName>
        <formula>Survey_Behavior_Score__c +  Survey_Demographic_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Combined Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Demographic_Score__c</fullName>
        <label>Survey Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Lead_Status__c</fullName>
        <label>Survey Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Lost_Details__c</fullName>
        <label>Inquisium Lost Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Recycle_Competitor_Name__c</fullName>
        <label>Inquisium Recycle - Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Survey_Recycle_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Clicktools</fullName>
                </value>
                <value>
                    <fullName>Confirmit</fullName>
                </value>
                <value>
                    <fullName>CustomerSat</fullName>
                </value>
                <value>
                    <fullName>Inquisite</fullName>
                </value>
                <value>
                    <fullName>Kenexa</fullName>
                </value>
                <value>
                    <fullName>Kenisis</fullName>
                </value>
                <value>
                    <fullName>Kiss Insights</fullName>
                </value>
                <value>
                    <fullName>Medallia</fullName>
                </value>
                <value>
                    <fullName>Market Tools</fullName>
                </value>
                <value>
                    <fullName>Qualtrics</fullName>
                </value>
                <value>
                    <fullName>Question Pro</fullName>
                </value>
                <value>
                    <fullName>Snap Survey</fullName>
                </value>
                <value>
                    <fullName>Survey Monkey</fullName>
                </value>
                <value>
                    <fullName>SurveyGizmo</fullName>
                </value>
                <value>
                    <fullName>Vision Critical</fullName>
                </value>
                <value>
                    <fullName>Vovici/Verint</fullName>
                </value>
                <value>
                    <fullName>WorldApp/Key Survey</fullName>
                </value>
                <value>
                    <fullName>Zarca</fullName>
                </value>
                <value>
                    <fullName>Zoomerang</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Recycle_Reason__c</fullName>
        <label>Inquisium Recycle/Trash Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Inquisium_Lead_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Future Interest</fullName>
                </value>
                <value>
                    <fullName>Needs Additional Features (-Enter Details-)</fullName>
                </value>
                <value>
                    <fullName>Not Enough Budget</fullName>
                </value>
                <value>
                    <fullName>No Survey Initiatives</fullName>
                </value>
                <value>
                    <fullName>Outsources Research</fullName>
                </value>
                <value>
                    <fullName>Sales Rejected</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Using a Competitor (-Specifiy Competitor Name-)</fullName>
                </value>
                <value>
                    <fullName>Using an In-house System</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Too Small</fullName>
                </value>
                <value>
                    <fullName>Working Better POC</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
                <value>
                    <fullName>Wants Gift Card</fullName>
                </value>
                <value>
                    <fullName>No Longer There</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Not a Fit/Joker</fullName>
                </value>
                <value>
                    <fullName>Already a Client</fullName>
                </value>
                <value>
                    <fullName>Other (-Enter Details-)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technographic__c</fullName>
        <description>Field is implemented on request # GR-0566 from Stephanie Sweetland</description>
        <label>Technographic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zome__c</fullName>
        <formula>if(Country ="Aus"  || Country ="AUS"  || Country ="Australia","AST",if(Country ="UK"  || Country ="United Kingdom"  || Country ="Britain" || Country ="Ireland"  || Country ="England"  || Country ="Wales"  || Country ="Scotland"  || Country ="Great Britain"  || Country ="U.K"  || Country ="U.K.","BST",
CASE( State ,"AK","AKDT","AL","CDT","AR","CDT","AZ","MST","CA","PDT","CO","MDT","CT","EDT","DC","EDT","DE","EDT","FL","EDT/CDT","GA","EDT","HI","HST","IA","CDT","ID","MDT","IL","CDT","IN","EDT/CDT","KS","CDT/MDT","KY","EDT","LA","CDT","MA","EDT","MD","EDT","ME","EDT","MI","EDT/CDT","MN","CDT","MO","CDT","MS","CDT","MT","MDT","NC","EDT","ND","CDT","NE","CDT","NJ","EDT","NM","MDT","NV","PDT","NY","EDT","OH","EDT","OK","CDT","OR","PDT/MDT","PA","EDT","PR","DST","RI","EDT","SC","EDT","SD","CDT","SD","MDT","TN","CDT","TN","EDT","TX","CDT/MDT","UT","MDT","VA","EDT","VT","EDT","WA","PDT","WI","CDT","WV","EDT","WY","MDT","AB","MDT","BC","PDT/MDT","MB","CDT","NB","ADT","NL","NDT","NS","ADT","NT","MDT","NU","EDT","ON","EDT/CDT","PE","ADT","QC","EDT","SK","CST/MDT","YT","PDT","None")))</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Closed_CC_Tasks__c</fullName>
        <label>Total Closed CC Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Closed_Event_Tasks__c</fullName>
        <label>Total Closed Event Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Days__c</fullName>
        <formula>Attended_No_of_Days__c  +  New_Lead_No_of_Days__c  +  Opportunity_Created_No_of_Days__c  +  Pricing_No_of_days__c  +  Qualified_No_of_Days__c  +  Set_No_of_Days__c  +  Working_No_of_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_CC_Tasks__c</fullName>
        <label>Total Open CC Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Event_Tasks__c</fullName>
        <label>Total Open Event Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type_of_Events__c</fullName>
        <inlineHelpText>Which of the following best describes your largest event?</inlineHelpText>
        <label>Type of Events? (EM)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference/Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Training/Workshop</fullName>
                </value>
                <value>
                    <fullName>Fundraiser/Gala</fullName>
                </value>
                <value>
                    <fullName>Incentive/Retreat</fullName>
                </value>
                <value>
                    <fullName>Internal Meetings &amp; Events</fullName>
                </value>
                <value>
                    <fullName>I do not plan or manage events</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Types_of_Surveys_Eloqua__c</fullName>
        <inlineHelpText>What type of surveys are relevant to your role?</inlineHelpText>
        <label>Types of Surveys? (IQ)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Data Collection</fullName>
                </value>
                <value>
                    <fullName>Employee Feedback</fullName>
                </value>
                <value>
                    <fullName>Event Feedback</fullName>
                </value>
                <value>
                    <fullName>Market Research</fullName>
                </value>
                <value>
                    <fullName>Product Requests/Enhancements</fullName>
                </value>
                <value>
                    <fullName>Training Evaluations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uber_Score__c</fullName>
        <description># 11344230</description>
        <label>Uber Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Counter__c</fullName>
        <label>Validation Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_are_you_looking_for_a_survey_tool__c</fullName>
        <inlineHelpText>Why are you looking for a survey solution?</inlineHelpText>
        <label>Why are you looking for survey tool?(IQ)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Surveying plans right now</fullName>
                </value>
                <value>
                    <fullName>Broad Initiative</fullName>
                </value>
                <value>
                    <fullName>One time Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhywastheLeadlost__c</fullName>
        <label>Why was the Lead lost?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already a Client</fullName>
                </value>
                <value>
                    <fullName>Already the Largest/Most Popular Venue in MMA</fullName>
                </value>
                <value>
                    <fullName>Chain Affiliation has to Approve (which one?)</fullName>
                </value>
                <value>
                    <fullName>Has in-house system (specify below)</fullName>
                </value>
                <value>
                    <fullName>Hotel Transitioning Management Companies (to which one)</fullName>
                </value>
                <value>
                    <fullName>Incorrect contact information</fullName>
                </value>
                <value>
                    <fullName>Lack of Awarded RFPs</fullName>
                </value>
                <value>
                    <fullName>Lack of RFPs</fullName>
                </value>
                <value>
                    <fullName>Limited Advertisers in the Market (competitors arent doing it)</fullName>
                </value>
                <value>
                    <fullName>Management Company has to Approve (which one?)</fullName>
                </value>
                <value>
                    <fullName>Market is too Saturated</fullName>
                </value>
                <value>
                    <fullName>MMA not appropriate/not favored</fullName>
                </value>
                <value>
                    <fullName>Needs additional Cvent features (specify below)</fullName>
                </value>
                <value>
                    <fullName>New Leadership is unfamiliar with Cvent</fullName>
                </value>
                <value>
                    <fullName>No events/too few events</fullName>
                </value>
                <value>
                    <fullName>No events OR surveys</fullName>
                </value>
                <value>
                    <fullName>No Longer There</fullName>
                </value>
                <value>
                    <fullName>No Survey</fullName>
                </value>
                <value>
                    <fullName>Not Budget Season</fullName>
                </value>
                <value>
                    <fullName>Not engaged  no budget/money</fullName>
                </value>
                <value>
                    <fullName>Not enough budget</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Not the right contact</fullName>
                </value>
                <value>
                    <fullName>Other (specify below)</fullName>
                </value>
                <value>
                    <fullName>Outsources registration (specify below)</fullName>
                </value>
                <value>
                    <fullName>Payment Terms</fullName>
                </value>
                <value>
                    <fullName>Referred to someone else in org</fullName>
                </value>
                <value>
                    <fullName>Too few registrants at the events</fullName>
                </value>
                <value>
                    <fullName>Undergoing a Reflag (to what)</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_start_finding_for_next_Venue_Supp__c</fullName>
        <label>Will start finding next Venue/Supp.(Pre)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within a month</fullName>
                </value>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>4-6 months</fullName>
                </value>
                <value>
                    <fullName>6+ months</fullName>
                </value>
                <value>
                    <fullName>No need for venues/suppliers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working_No_of_Days__c</fullName>
        <label>(B) Working(No. of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>